feat(reports): scope report documents and draft versions to configured order groups
Resolve complete authorized analysis membership from persisted order and group configuration. Preserve legacy releases without guessing membership, serialize drafts per document, and disable old dynamic issuance pending frozen-content signing.

Validation: 186 report tests pass after W03 integration; full Java21 clean install passes. No frontend changes. PostgreSQL migration rehearsal and report UI follow in the remaining authorized batches.